--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "bulma": "^0.8.0",
     "core-js": "^3.6.4",
     "register-service-worker": "^1.6.2",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.6"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.18.0",
